RESOLVED FIXED79045
Does not build on GNU Hurd
https://bugs.webkit.org/show_bug.cgi?id=79045
Summary Does not build on GNU Hurd
Gustavo Noronha (kov)
Reported 2012-02-20 14:36:51 PST
From the Debian bug: The problem is due to the missing PTHREAD_KEYS_MAX definition (which is optional in POSIX, though). The attached patch does two things: - Source/JavaScriptCore/wtf/Platform.h defines WTF_OS_HURD in hopefully a suitable way for upstream; it would be nice if you could send it upstream (so I don't need to patch also the various webkit copies for it). - Source/JavaScriptCore/wtf/ThreadIdentifierDataPthreads.cpp adds a band-aid fix fix for the lack of PTHREAD_KEYS_MAX definition, with a value which should not cause issues; this part should not go upstream but stay locally in Debian for now, as it will need either a better fix in webkit or a fix in glibc/libpthread for Hurd.
Attachments
Patch (2.13 KB, patch)
2012-02-20 14:42 PST, Gustavo Noronha (kov)
no flags
Patch (2.17 KB, patch)
2012-02-20 15:47 PST, Gustavo Noronha (kov)
no flags
Gustavo Noronha (kov)
Comment 1 2012-02-20 14:42:04 PST
WebKit Review Bot
Comment 2 2012-02-20 15:16:55 PST
Comment on attachment 127852 [details] Patch Rejecting attachment 127852 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Gustavo Noronha found in /mnt/git/webkit-commit-queue/Source/JavaScriptCore/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /mnt/git/webkit-commit-queue/Source/JavaScriptCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/11552258
Gustavo Noronha (kov)
Comment 3 2012-02-20 15:47:05 PST
WebKit Review Bot
Comment 4 2012-02-20 18:12:09 PST
Comment on attachment 127864 [details] Patch Clearing flags on attachment: 127864 Committed r108279: <http://trac.webkit.org/changeset/108279>
WebKit Review Bot
Comment 5 2012-02-20 18:12:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.