Does not build on GNU Hurd https://bugs.webkit.org/show_bug.cgi?id=79045

Patch by Pino Toscano <pino@debian.org> on 2012-02-20
Reviewed by Gustavo Noronha Silva.

* wtf/Platform.h: define WTF_OS_HURD.
* wtf/ThreadIdentifierDataPthreads.cpp: adds a band-aid fix
for the lack of PTHREAD_KEYS_MAX definition, with a value which
should not cause issues.

git-svn-id: svn://svn.chromium.org/blink/trunk@108279 bbb929c8-8fbe-4397-9dbb-9b2b20218538